@@ -27,6 +27,7 @@ Version 1.4.10 - SVN
   - Fix "Unknown Sender" on message after reading a digest (#1673047).
   - Fix Priority and Receipt compose options being reset after return from
     HTML addressbook (#1673056).
+  - Fix sorting of folder list with non-. delimiter (#1593229).
 
 Version 1.4.9a - 3 December 2006
 --------------------------------
